   * GUI1 comboboxes now use the thinner menu frame style.
   * Fixed minimap buttons appearing without contents or in the wrong state
     when the game window is resized, when using debug commands to toggle fog
     and/or shroud, and probably a lot of other occurrences that are now
     covered by a proper fix on top of the quick hacks shipped with versions
     1.11.16 and 1.12.3.
 * Miscellaneous and bug fixes:
   * Revert all updates to hot-key handling which broke letter-based short-cuts
     on non-US keyboard layouts, where characters are in different key
     locations (bug #24186).
   * Fix the move-to-targets candidate action of the default AI ignoring tunnels
   * Fix two rare bugs in the goto candidate action that resulted in goto moves
     by other units being skipped after a unit could not get to its goal.
   * Fixed possible assertion failues in mp.
   * Fixed false positive OOS messages in replay when replaying games from an older
     wesnoth version..
   * Fixed unit test compilation against Boost 1.60 and later (bug #24234).

Version 1.12.5:
 * Campaigns:
   * Eastern Invasion:
     * Fixed scenario events not working right on easy difficulty in 'Captured'.
   * Legend of Wesmere
     * Fixed carryover bugs in scenarios 5-12.
       (units missing from carryover, units appearing twice on map...)
 * Editor:
   * Add Recent Files menu with a list of recently saved or loaded maps or
     scenarios, up to a custom limit (by default 10) that can be set in
     Advanced Preferences.
   * Fixed Player Start labels not being updated with repeat map generations
     (bug #20036)
 * Language and i18n:
   * Updated translations: British English, French, Hungarian, Japanese,
     Latvian, Polish, Portuguese, Scottish Gaelic, Spanish
   * Fixed crashes during start-up on Windows resulting from add-ons containing
     erroneous textdomain declarations (bug #23839).
 * Multiplayer:
   * Era names no longer support formatting markup in the game setup screen.