@@ -11,6 +11,8 @@ Version 1.12.5+dev:
      and/or shroud, and probably a lot of other occurrences that are now
      covered by a proper fix on top of the quick hacks shipped with versions
      1.11.16 and 1.12.3.
+   * Fixed MP lobby games list coming up empty when Invert is checked while
+     Apply Filter is not (bug #23117).
  * Miscellaneous and bug fixes:
    * Revert all updates to hot-key handling which broke letter-based short-cuts
      on non-US keyboard layouts, where characters are in different key
